changed all of the pizza shit to the appropraite page

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,5 +6,38 @@
     </head>
     <body>
         <h1>Pizza</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a3/Eq_it-na_pizza-margherita_sep2005_sml.jpg" alt="Really good pizza">
+        
+        <strong>Cheese Pizza</strong>
+
+        <p>pizza is very good and sjkdfjasjdf
+            asdfasdfasdf
+            asdfasdfasdfasdf
+            asdfasdfasdf
+        </p>
+
+        <p>
+            jack is very good at eating pizza and really likes it. asdasdhahsdhdasfkksadfkjajsdfjasdf
+            dsafasdfasdfasdfasdfasdf
+            asdfasdfasdfasdf
+        </p>
+
+        <ul>
+            <li>Flour </li>
+               <li>Cheese</li>
+               <li>Pepporini</li>
+               <li>salt</li>
+               <li>Dough</li>
+               <li>Tomato</li>
+               <li>water</li>
+        </ul>
+
+        <ol>
+            <li>cook</li>
+            <li>eat</li>
+            <li>wash</li>
+            <li>watch</li>
+        </ol>
+        
     </body>
 </html>
